DigicielFull/force-app/main/default/objects/amc__Persona__c/fields/amc__Persona_Goals__c.field-meta.xml
<CustomField>
    <fullName>amc__Persona_Goals__c</fullName>
    <inlineHelpText>A description of the Goals this Persona is trying to achieve</inlineHelpText>
    <label>Persona Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>