DigicielFull/force-app/main/default/objects/amc__Persona__c/fields/amc__Persona_Overview__c.field-meta.xml
<CustomField>
    <fullName>amc__Persona_Overview__c</fullName>
    <inlineHelpText>A detailed overview of the Persona</inlineHelpText>
    <label>Persona Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>