DigicielFull/force-app/main/default/objects/amc__Persona__c/fields/amc__Program__c.field-meta.xml
<CustomField>
    <fullName>amc__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Program this Persona relates to</inlineHelpText>
    <label>Program</label>
    <referenceTo>amc__Program__c</referenceTo>
    <relationshipLabel>Personas</relationshipLabel>
    <relationshipName>Personas</relationshipName>
    <type>Lookup</type>
</CustomField>